@@ -14,6 +14,7 @@ Patches:
   David Fraser <davidfraser@users.sourceforge.net>
   Vadim Berezniker <kryptolus@users.sourceforge.net>
   Marcin Floryan <mfloryan@users.sourceforge.net>
+  Stanislav Petrakov <stannic@gmail.com>
 
 Translations:
   Traditional Chinese:    Leo Liaw <leo@mis.ccu.edu.tw> 
